Refactor of spntools/gspn