@@ -4,10 +4,11 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :global-vars {*assert* true}
+  ;:jvm-opts ["--add-modules" "java.xml.bind"]  ; Java 9 adventure
   :dependencies [[org.clojure/clojure            "1.9.0"]
                  [org.clojure/clojurescript      "1.9.946"]
                  [org.clojure/tools.trace        "0.7.9"]
-                 [org.clojure/core.async         "0.4.474"       :exclusions [org.clojure/data.priority-map]]
+                 [org.clojure/core.async         "0.4.474" :exclusions [org.clojure/data.priority-map]]
                  [com.cemerick/piggieback        "0.2.2"]
                  [com.stuartsierra/component     "0.3.2"]
                  [environ                        "1.1.0"]
@@ -15,77 +16,58 @@
                  [org.clojure/tools.logging      "0.4.0"]
                  [net.cgrand/xforms              "0.16.0"]
                  
-                 [ring                           "1.6.3"]
+                 [ring                           "1.6.3" :exclusions [org.clojure/tools.namespace org.clojure/data.priority-map]]
                  [ring/ring-defaults             "0.3.1"]
                  [compojure                      "1.6.0"]
                  [http-kit                       "2.2.0"]
 
-                 [com.taoensso/sente             "1.11.0-POD"    :exclusions [org.clojure/data.priority-map]]
+                 [com.taoensso/sente             "1.11.0-POD" :exclusions [org.clojure/data.priority-map]]
 
                  [reagent                        "0.7.0"]
                  [reagent-forms                  "0.5.35"]
-                 [re-frame                       "0.10.2"] 
-                 [re-frisk                       "0.5.3"         :exclusions [org.clojure/data.priority-map]] 
+                 [re-frame                       "0.10.4"] 
+                 [re-frisk                       "0.5.3" :exclusions [org.clojure/data.priority-map]] 
                  [org.webjars/bootstrap          "3.3.7"] ; 4 beta breaks things, no webjar for 4.0
                  [quil                           "2.6.0"]
 
                  [datawalk                       "0.1.12"]
 
                  [aysylu/loom                    "1.0.0"]
-                 [pdenno/utils4pmap              "0.1.0"          :exclusions [org.clojure/data.priority-map]]
+                 [pdenno/utils4pmap              "0.1.0" :exclusions [org.clojure/data.priority-map]]
                  [pdenno/pn-draw                 "0.1.0-SNAPSHOT"]
+                 [pdenno/gspn                    "0.1.0-SNAPSHOT"]
+                 [gov.nist/MJPdes                "0.3.0"]
                  [gov.nist/spntools              "0.1.0"]]
-
-  :plugins [[lein-figwheel  "0.5.14"]
-            [lein-cljsbuild "1.1.4"]]
   :hooks [leiningen.cljsbuild]
-  
   :source-paths ["src"]
   :resource-paths ["resources" "resources-index/prod"]
   :target-path "target/%s"
 
   :main ^:skip-aot gov.nist.sinet.run ; POD tried .user with cljs-repl (NG?)
-
-  :cljsbuild
-  {:builds
-   {:client {:source-paths ["src/gov/nist/sinet/client"]
-             :figwheel true
-             :compiler
-             {:output-to "resources/public/js/app.js"
-              :output-dir "dev-resources/public/js/out"}}}}
-  
-  :profiles {:dev-config {}
-             ;; There is a user.clj in dev/. By design of clojure, it gets loaded if it on the path...
-             :dev [:dev-config ; This pattern of use from rente. 
-                   {:dependencies [[org.clojure/tools.namespace "0.2.10" :exclusions [org.clojure/data.priority-map]]
-                                   [com.cemerick/piggieback     "0.2.2"] 
-                                   [figwheel                    "0.5.14" :exclusions [org.clojure/data.priority-map]]
-                                   [figwheel-sidecar            "0.5.14" :exclusions [org.clojure/data.priority-map]]]
-                    :repl-options {:nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]}
-                    :plugins [[lein-figwheel "0.5.14"]
-                              [lein-environ "1.0.1"]]
-                              
-                    :source-paths ["dev"] ;...now it is on the path. 
-                    :resource-paths ^:replace ["resources" "dev-resources" "resources-index/dev"]
-
-                    :cljsbuild
-                    {:builds
-                     {:client {:source-paths ["dev"]
-                               :compiler {:optimizations :none :source-map true}}}}
-
-                    :figwheel {:http-server-root "public"
-                               :server-port 3449
-                               :repl false
-                               :css-dirs ["resources/public/css"]}}]
-
+  ;; There is a user.clj in dev/. By design of clojure, it gets loaded if it on the path...
+  :profiles {:dev {:cljsbuild
+                   {:builds 
+                    {:client {:source-paths ["dev"] :compiler {:optimizations :none :source-map true}}}}
+                   :figwheel {:http-server-root "public"
+                              :server-port 3449
+                              :repl false
+                              :css-dirs ["resources/public/css"]}
+                   :dependencies [[org.clojure/tools.namespace "0.2.10" :exclusions [org.clojure/data.priority-map]]
+                                  [com.cemerick/piggieback     "0.2.2"] 
+                                  [figwheel                    "0.5.14" :exclusions [org.clojure/data.priority-map]]
+                                  [figwheel-sidecar            "0.5.14" :exclusions [org.clojure/data.priority-map]]]
+                   :source-paths   ["dev"]
+                   :resource-paths ^:replace ["resources" "dev-resources" "resources-index/dev"]
+                   :repl-options {:nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]}
+                   :plugins [[lein-figwheel  "0.5.14"]
+                             [lein-cljsbuild "1.1.7" ]
+                             [lein-environ   "1.0.1" ]]}
              :prod {:cljsbuild
                     {:builds 
-                     {:client {:compiler {:optimizations :advanced
-                                          :elide-asserts true
-                                          :pretty-print false}}}}}
+                     {:client {:compiler {:optimizations :advanced :elide-asserts true :pretty-print false}}}}}
              :1.8 {:dependencies [[org.clojure/clojure "1.8.0"]]}
              :1.9 {:dependencies [[org.clojure/clojure "1.9.0"]]}}
   :aliases  {"start-repl" ["do" "clean," "cljsbuild" "once," "repl" ":headless"]
-             "test-all"   ["with-profile" "default" #_"default:+1.8:+1.9" "test"] ; POD lein test would be enough.
+             "test-all"   ["with-profile" "default:+1.8:+1.9" "test"]
              "start"      ["do" "clean," "cljsbuild" "once," "run"]
              "package"    ["with-profile" "prod" "do" "clean" ["cljsbuild" "once"]]})
